// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RLS Policies – supabase/reset.sql > snapshot: all CREATE POLICY names 1`] = `
[
  "Allow admin deletes on concerts",
  "Allow admin inserts on concerts",
  "Allow admin updates on concerts",
  "accreditation_requests: admin all",
  "accreditation_requests: own insert",
  "accreditation_requests: own read",
  "admin_audit_log: admin insert",
  "admin_audit_log: admin read",
  "api_credentials_admin_only",
  "apify_usage_months: admin all",
  "app_logs: admin read",
  "app_logs: authenticated insert",
  "artist_assets_admin_all",
  "artist_assets_delete_own",
  "artist_assets_insert_own",
  "artist_assets_select_own",
  "artist_billing_profiles: admin all",
  "artist_billing_profiles: artist read own",
  "artist_billing_profiles: artist write own",
  "artist_documents: admin all",
  "artist_documents: artist read own",
  "artist_documents: artist write own",
  "artist_epks: admin all",
  "artist_epks: artist insert own",
  "artist_epks: artist read own",
  "artist_epks: artist update own",
  "artist_epks: public read visible",
  "artist_invoices: admin all",
  "artist_invoices: artist read own",
  "artist_invoices: artist write own",
  "artist_landing_pages: admin all",
  "artist_landing_pages: artist insert own",
  "artist_landing_pages: artist read own",
  "artist_landing_pages: artist update own",
  "artist_landing_pages: editor+ read all",
  "artist_landing_pages: editor+ update",
  "artist_landing_pages: public read published",
  "artist_listener_metrics: admin all",
  "artist_listener_metrics: artist read own",
  "artist_members: admin all",
  "artist_members: own read",
  "artist_replies_admin_all",
  "artist_replies_insert_own",
  "artist_replies_select_own",
  "artist_territory_metrics: admin all",
  "artist_territory_metrics: artist read own",
  "artists: admin delete",
  "artists: artist read own",
  "artists: can_manage_artists insert",
  "artists: can_manage_artists update",
  "artists: own artist update",
  "artists: public read visible",
  "asset_artists: authenticated read",
  "asset_artists: editor+ delete",
  "asset_artists: editor+ write",
  "asset_folders: admin delete",
  "asset_folders: authenticated read",
  "asset_folders: can_view_admin_panel update",
  "asset_folders: can_view_admin_panel write",
  "assets: admin delete",
  "assets: authenticated read",
  "assets: can_view_admin_panel insert",
  "assets: can_view_admin_panel update",
  "assets: public press read",
  "ban_history: admin insert",
  "ban_history: admin read",
  "carry_forwards: admin all",
  "carry_forwards: artist read own",
  "concert_artists: admin all",
  "concert_artists: artist manage",
  "concert_artists: public read",
  "concerts: artist manage own",
  "concerts: artist own delete",
  "concerts: artist own insert",
  "concerts: artist own read",
  "concerts: artist own update",
  "concerts: public read visible",
  "custom_permission_definitions: admin read",
  "custom_permission_definitions: admin write",
  "custom_role_permissions: admin read",
  "custom_role_permissions: admin write",
  "custom_role_permissions: assigned read",
  "custom_roles: admin read",
  "custom_roles: admin write",
  "custom_roles: assigned read",
  "distributor_import_batches: admin all",
  "distributor_import_batches: artist read linked",
  "editor_activity_log: admin read",
  "editor_activity_log: editor insert own",
  "editor_activity_log: editor read own",
  "editor_notifications: admin manage",
  "editor_notifications: editor read own",
  "editor_notifications: editor update own",
  "epk_download_events: admin all",
  "epk_download_events: artist read own",
  "epk_fonts: admin all",
  "epk_fonts: artist delete own",
  "epk_fonts: artist insert own",
  "epk_fonts: artist read own",
  "epk_fonts: public read visible artist",
  "epk_share_links: admin all",
  "epk_share_links: artist insert own",
  "epk_share_links: artist read own",
  "epk_share_links: artist update own",
  "epk_templates: admin all",
  "epk_templates: read published",
  "epk_versions: admin all",
  "epk_versions: artist insert own",
  "epk_versions: artist read own",
  "event_impact: admin all",
  "event_impact: artist read own",
  "financial_audit: admin insert",
  "financial_audit: admin read",
  "genres_read_public",
  "genres_write_admin",
  "interview_requests: artist read own",
  "interview_requests: artist update own",
  "interview_requests: journalist manage own",
  "journalist_applications: admin all",
  "journalist_applications: own insert",
  "journalist_applications: own read",
  "journalist_downloads: admin read",
  "journalist_downloads: own insert",
  "journalist_downloads: own read",
  "label_messages: admin all",
  "label_messages: artist own read",
  "media_files: admin delete",
  "media_files: authenticated read",
  "media_files: can_view_admin_panel update",
  "media_files: can_view_admin_panel write",
  "media_folders: admin delete",
  "media_folders: authenticated read",
  "media_folders: can_view_admin_panel update",
  "media_folders: can_view_admin_panel write",
  "merch_orders: admin all",
  "merch_orders: artist read own",
  "message_attachments: admin all",
  "message_attachments: artist own read",
  "message_events: admin all",
  "message_events: editor insert read",
  "message_folders: admin all",
  "message_internal_notes: admin all",
  "message_internal_notes: editor read write",
  "message_receipts: admin read",
  "message_receipts: own all",
  "message_rules: admin all",
  "message_templates: admin all",
  "news_post_artists: can_publish_news write",
  "news_post_artists: public read",
  "news_posts: admin delete",
  "news_posts: can_edit_news update",
  "news_posts: can_publish_news insert",
  "news_posts: public read",
  "notification_preferences: own all",
  "notifications: admin read all",
  "notifications: own read",
  "notifications: own update",
  "page_events: admin all",
  "page_events: artist read own",
  "portal_attach: admin all",
  "portal_attach: via message sender",
  "portal_faq_categories: editor+ write",
  "portal_faq_categories: published read",
  "portal_faq_items: editor+ write",
  "portal_faq_items: published read",
  "portal_feature_flags: admin write",
  "portal_feature_flags: authenticated read",
  "portal_feedback: artist insert own",
  "portal_feedback: artist read own",
  "portal_feedback: editor+ read all",
  "portal_feedback: editor+ update",
  "portal_messages: admin all",
  "portal_messages: recipient read",
  "portal_messages: sender own",
  "portal_msg_folders: admin all",
  "portal_msg_folders: artist own",
  "press_kit_items: can_view_admin_panel delete",
  "press_kit_items: can_view_admin_panel insert",
  "press_kit_items: can_view_admin_panel update",
  "press_kit_items: public read",
  "press_photos: admin all",
  "press_photos: public read",
  "promo_impact: admin all",
  "promo_impact: artist read own",
  "promo_log: admin all",
  "promo_log: artist read",
  "promo_tracks: admin all",
  "promo_tracks: journalist read",
  "rbac_audit_log: admin insert",
  "rbac_audit_log: admin read",
  "release_artists: can_manage_releases write",
  "release_artists: public read",
  "release_checklists: admin all",
  "release_checklists: artist insert own",
  "release_checklists: artist read own",
  "release_checklists: artist update own",
  "release_submission_tracks: artist insert own",
  "release_submission_tracks: artist read own",
  "release_submission_tracks: editor+ read all",
  "release_submissions: artist insert own",
  "release_submissions: artist read own",
  "release_submissions: editor+ read all",
  "release_submissions: editor+ update",
  "releases: admin delete",
  "releases: artist own read",
  "releases: can_manage_releases insert",
  "releases: can_manage_releases update",
  "releases: public read visible",
  "role_changes: admin insert",
  "role_changes: admin read",
  "role_permissions: admin update",
  "role_permissions: authenticated read",
  "sales_statement_line_items: admin all",
  "sales_statement_line_items: artist read own",
  "sales_statements: admin all",
  "sales_statements: artist read own",
  "settlement_ledger: admin all",
  "settlement_ledger: artist read own",
  "settlement_periods: admin all",
  "site_settings_admin_write",
  "site_settings_public_read",
  "sos_accounting_workspaces: admin/editor all",
  "sos_period_summaries: admin all",
  "sos_rules_presets: admin all",
  "spotify_track_play_snapshots: admin all",
  "spotify_track_play_snapshots: artist read own",
  "streaming_stats: admin all",
  "streaming_stats: artist read own",
  "submission_form_drafts: member all own",
  "submission_form_schema: editor+ write",
  "submission_form_schema: public read",
  "submission_release_type_rules: editor+ write",
  "submission_release_type_rules: public read",
  "support_known_errors: admin read",
  "support_known_errors: admin write",
  "sync_logs: editor+ read",
  "sync_queue: admin all",
  "tour_artist_finance: admin all",
  "tour_artist_finance: own artist",
  "tour_collaborators: admin all",
  "tour_collaborators: owner delete",
  "tour_collaborators: owner manage",
  "tour_collaborators: read",
  "tour_contacts: admin all",
  "tour_contacts: artist manage",
  "tour_crew: admin all",
  "tour_crew: artist manage",
  "tour_merch_items: admin all",
  "tour_merch_items: artist manage",
  "tour_merch_settlements: admin all",
  "tour_merch_settlements: artist manage",
  "tour_share_links: admin all",
  "tour_share_links: artist manage",
  "tour_stop_artist_private: admin all",
  "tour_stop_artist_private: own artist",
  "tour_stop_performing_artists: admin all",
  "tour_stop_performing_artists: tour access",
  "tour_stops: admin all",
  "tour_stops: artist manage",
  "tour_tasks: admin all",
  "tour_tasks: artist manage",
  "tours: admin all",
  "tours: artist manage",
  "user_custom_roles: admin read",
  "user_custom_roles: admin write",
  "user_custom_roles: own read",
  "user_roles: admin all",
  "user_roles: own read",
  "users: admin read all",
  "users: admin update all",
  "users: own read",
  "users: own update",
  "video_submissions: artist insert own",
  "video_submissions: artist read own",
  "video_submissions: editor+ read all",
  "video_submissions: editor+ update",
  "videos: admin delete",
  "videos: can_manage_videos insert",
  "videos: can_manage_videos update",
  "videos: public read",
  "zammad_ticket_log: admin read",
]
`;

exports[`RLS Policies – supabase/reset.sql > snapshot: all tables with RLS enabled 1`] = `
[
  "accreditation_requests",
  "admin_audit_log",
  "api_credentials",
  "apify_usage_months",
  "app_logs",
  "artist_assets",
  "artist_billing_profiles",
  "artist_documents",
  "artist_epks",
  "artist_invoices",
  "artist_landing_pages",
  "artist_listener_metrics",
  "artist_members",
  "artist_replies",
  "artist_settlement_ledger",
  "artist_territory_metrics",
  "artists",
  "asset_artists",
  "asset_folders",
  "assets",
  "ban_history",
  "concert_artists",
  "concerts",
  "custom_permission_definitions",
  "custom_role_permissions",
  "custom_roles",
  "distributor_import_batches",
  "editor_activity_log",
  "editor_notifications",
  "epk_download_events",
  "epk_fonts",
  "epk_share_links",
  "epk_templates",
  "epk_versions",
  "event_impact",
  "financial_audit_events",
  "genres",
  "idempotency_keys",
  "interview_requests",
  "journalist_applications",
  "journalist_downloads",
  "label_messages",
  "media_files",
  "media_folders",
  "merch_orders",
  "message_attachments",
  "message_events",
  "message_folders",
  "message_internal_notes",
  "message_receipts",
  "message_rules",
  "message_templates",
  "news_post_artists",
  "news_posts",
  "notification_preferences",
  "notifications",
  "page_events",
  "period_carry_forwards",
  "portal_faq_categories",
  "portal_faq_items",
  "portal_feature_flags",
  "portal_feedback",
  "portal_message_attachments",
  "portal_message_folders",
  "portal_messages",
  "press_kit_items",
  "press_photos",
  "promo_impact",
  "promo_log_entries",
  "promo_tracks",
  "rbac_audit_log",
  "release_artists",
  "release_checklists",
  "release_submission_tracks",
  "release_submissions",
  "releases",
  "role_changes",
  "role_permissions",
  "sales_statement_line_items",
  "sales_statements",
  "settlement_periods",
  "site_settings",
  "sos_accounting_workspaces",
  "sos_period_summaries",
  "sos_rules_presets",
  "spotify_track_play_snapshots",
  "streaming_stats",
  "submission_form_drafts",
  "submission_form_schema",
  "submission_release_type_rules",
  "support_known_errors",
  "sync_logs",
  "sync_queue",
  "tour_artist_finance",
  "tour_collaborators",
  "tour_contacts",
  "tour_crew_members",
  "tour_merch_items",
  "tour_merch_settlements",
  "tour_share_links",
  "tour_stop_artist_private",
  "tour_stop_performing_artists",
  "tour_stops",
  "tour_tasks",
  "tours",
  "user_custom_roles",
  "user_invites",
  "user_roles",
  "users",
  "video_submissions",
  "videos",
  "zammad_ticket_log",
]
`;

exports[`RLS Policies – supabase/reset.sql > snapshot: policies per table (extracted from CREATE POLICY ... ON ...) 1`] = `
{
  "accreditation_requests": [
    "accreditation_requests: admin all",
    "accreditation_requests: own insert",
    "accreditation_requests: own read",
  ],
  "admin_audit_log": [
    "admin_audit_log: admin insert",
    "admin_audit_log: admin read",
  ],
  "api_credentials": [
    "api_credentials_admin_only",
  ],
  "apify_usage_months": [
    "apify_usage_months: admin all",
  ],
  "app_logs": [
    "app_logs: admin read",
    "app_logs: authenticated insert",
  ],
  "artist_assets": [
    "artist_assets_admin_all",
    "artist_assets_delete_own",
    "artist_assets_insert_own",
    "artist_assets_select_own",
  ],
  "artist_billing_profiles": [
    "artist_billing_profiles: admin all",
    "artist_billing_profiles: artist read own",
    "artist_billing_profiles: artist write own",
  ],
  "artist_documents": [
    "artist_documents: admin all",
    "artist_documents: artist read own",
    "artist_documents: artist write own",
  ],
  "artist_epks": [
    "artist_epks: admin all",
    "artist_epks: artist insert own",
    "artist_epks: artist read own",
    "artist_epks: artist update own",
    "artist_epks: public read visible",
  ],
  "artist_invoices": [
    "artist_invoices: admin all",
    "artist_invoices: artist read own",
    "artist_invoices: artist write own",
  ],
  "artist_landing_pages": [
    "artist_landing_pages: admin all",
    "artist_landing_pages: artist insert own",
    "artist_landing_pages: artist read own",
    "artist_landing_pages: artist update own",
    "artist_landing_pages: editor+ read all",
    "artist_landing_pages: editor+ update",
    "artist_landing_pages: public read published",
  ],
  "artist_listener_metrics": [
    "artist_listener_metrics: admin all",
    "artist_listener_metrics: artist read own",
  ],
  "artist_members": [
    "artist_members: admin all",
    "artist_members: own read",
  ],
  "artist_replies": [
    "artist_replies_admin_all",
    "artist_replies_insert_own",
    "artist_replies_select_own",
  ],
  "artist_settlement_ledger": [
    "settlement_ledger: admin all",
    "settlement_ledger: artist read own",
  ],
  "artist_territory_metrics": [
    "artist_territory_metrics: admin all",
    "artist_territory_metrics: artist read own",
  ],
  "artists": [
    "artists: admin delete",
    "artists: artist read own",
    "artists: can_manage_artists insert",
    "artists: can_manage_artists update",
    "artists: own artist update",
    "artists: public read visible",
  ],
  "asset_artists": [
    "asset_artists: authenticated read",
    "asset_artists: editor+ delete",
    "asset_artists: editor+ write",
  ],
  "asset_folders": [
    "asset_folders: admin delete",
    "asset_folders: authenticated read",
    "asset_folders: can_view_admin_panel update",
    "asset_folders: can_view_admin_panel write",
  ],
  "assets": [
    "assets: admin delete",
    "assets: authenticated read",
    "assets: can_view_admin_panel insert",
    "assets: can_view_admin_panel update",
    "assets: public press read",
  ],
  "ban_history": [
    "ban_history: admin insert",
    "ban_history: admin read",
  ],
  "concert_artists": [
    "concert_artists: admin all",
    "concert_artists: artist manage",
    "concert_artists: public read",
  ],
  "concerts": [
    "Allow admin deletes on concerts",
    "Allow admin inserts on concerts",
    "Allow admin updates on concerts",
    "concerts: artist manage own",
    "concerts: artist own delete",
    "concerts: artist own insert",
    "concerts: artist own read",
    "concerts: artist own update",
    "concerts: public read visible",
  ],
  "custom_permission_definitions": [
    "custom_permission_definitions: admin read",
    "custom_permission_definitions: admin write",
  ],
  "custom_role_permissions": [
    "custom_role_permissions: admin read",
    "custom_role_permissions: admin write",
    "custom_role_permissions: assigned read",
  ],
  "custom_roles": [
    "custom_roles: admin read",
    "custom_roles: admin write",
    "custom_roles: assigned read",
  ],
  "distributor_import_batches": [
    "distributor_import_batches: admin all",
    "distributor_import_batches: artist read linked",
  ],
  "editor_activity_log": [
    "editor_activity_log: admin read",
    "editor_activity_log: editor insert own",
    "editor_activity_log: editor read own",
  ],
  "editor_notifications": [
    "editor_notifications: admin manage",
    "editor_notifications: editor read own",
    "editor_notifications: editor update own",
  ],
  "epk_download_events": [
    "epk_download_events: admin all",
    "epk_download_events: artist read own",
  ],
  "epk_fonts": [
    "epk_fonts: admin all",
    "epk_fonts: artist delete own",
    "epk_fonts: artist insert own",
    "epk_fonts: artist read own",
    "epk_fonts: public read visible artist",
  ],
  "epk_share_links": [
    "epk_share_links: admin all",
    "epk_share_links: artist insert own",
    "epk_share_links: artist read own",
    "epk_share_links: artist update own",
  ],
  "epk_templates": [
    "epk_templates: admin all",
    "epk_templates: read published",
  ],
  "epk_versions": [
    "epk_versions: admin all",
    "epk_versions: artist insert own",
    "epk_versions: artist read own",
  ],
  "event_impact": [
    "event_impact: admin all",
    "event_impact: artist read own",
  ],
  "financial_audit_events": [
    "financial_audit: admin insert",
    "financial_audit: admin read",
  ],
  "genres": [
    "genres_read_public",
    "genres_write_admin",
  ],
  "interview_requests": [
    "interview_requests: artist read own",
    "interview_requests: artist update own",
    "interview_requests: journalist manage own",
  ],
  "journalist_applications": [
    "journalist_applications: admin all",
    "journalist_applications: own insert",
    "journalist_applications: own read",
  ],
  "journalist_downloads": [
    "journalist_downloads: admin read",
    "journalist_downloads: own insert",
    "journalist_downloads: own read",
  ],
  "label_messages": [
    "label_messages: admin all",
    "label_messages: artist own read",
  ],
  "media_files": [
    "media_files: admin delete",
    "media_files: authenticated read",
    "media_files: can_view_admin_panel update",
    "media_files: can_view_admin_panel write",
  ],
  "media_folders": [
    "media_folders: admin delete",
    "media_folders: authenticated read",
    "media_folders: can_view_admin_panel update",
    "media_folders: can_view_admin_panel write",
  ],
  "merch_orders": [
    "merch_orders: admin all",
    "merch_orders: artist read own",
  ],
  "message_attachments": [
    "message_attachments: admin all",
    "message_attachments: artist own read",
  ],
  "message_events": [
    "message_events: admin all",
    "message_events: editor insert read",
  ],
  "message_folders": [
    "message_folders: admin all",
  ],
  "message_internal_notes": [
    "message_internal_notes: admin all",
    "message_internal_notes: editor read write",
  ],
  "message_receipts": [
    "message_receipts: admin read",
    "message_receipts: own all",
  ],
  "message_rules": [
    "message_rules: admin all",
  ],
  "message_templates": [
    "message_templates: admin all",
  ],
  "news_post_artists": [
    "news_post_artists: can_publish_news write",
    "news_post_artists: public read",
  ],
  "news_posts": [
    "news_posts: admin delete",
    "news_posts: can_edit_news update",
    "news_posts: can_publish_news insert",
    "news_posts: public read",
  ],
  "notification_preferences": [
    "notification_preferences: own all",
  ],
  "notifications": [
    "notifications: admin read all",
    "notifications: own read",
    "notifications: own update",
  ],
  "page_events": [
    "page_events: admin all",
    "page_events: artist read own",
  ],
  "period_carry_forwards": [
    "carry_forwards: admin all",
    "carry_forwards: artist read own",
  ],
  "portal_faq_categories": [
    "portal_faq_categories: editor+ write",
    "portal_faq_categories: published read",
  ],
  "portal_faq_items": [
    "portal_faq_items: editor+ write",
    "portal_faq_items: published read",
  ],
  "portal_feature_flags": [
    "portal_feature_flags: admin write",
    "portal_feature_flags: authenticated read",
  ],
  "portal_feedback": [
    "portal_feedback: artist insert own",
    "portal_feedback: artist read own",
    "portal_feedback: editor+ read all",
    "portal_feedback: editor+ update",
  ],
  "portal_message_attachments": [
    "portal_attach: admin all",
    "portal_attach: via message sender",
  ],
  "portal_message_folders": [
    "portal_msg_folders: admin all",
    "portal_msg_folders: artist own",
  ],
  "portal_messages": [
    "portal_messages: admin all",
    "portal_messages: recipient read",
    "portal_messages: sender own",
  ],
  "press_kit_items": [
    "press_kit_items: can_view_admin_panel delete",
    "press_kit_items: can_view_admin_panel insert",
    "press_kit_items: can_view_admin_panel update",
    "press_kit_items: public read",
  ],
  "press_photos": [
    "press_photos: admin all",
    "press_photos: public read",
  ],
  "promo_impact": [
    "promo_impact: admin all",
    "promo_impact: artist read own",
  ],
  "promo_log_entries": [
    "promo_log: admin all",
    "promo_log: artist read",
  ],
  "promo_tracks": [
    "promo_tracks: admin all",
    "promo_tracks: journalist read",
  ],
  "rbac_audit_log": [
    "rbac_audit_log: admin insert",
    "rbac_audit_log: admin read",
  ],
  "release_artists": [
    "release_artists: can_manage_releases write",
    "release_artists: public read",
  ],
  "release_checklists": [
    "release_checklists: admin all",
    "release_checklists: artist insert own",
    "release_checklists: artist read own",
    "release_checklists: artist update own",
  ],
  "release_submission_tracks": [
    "release_submission_tracks: artist insert own",
    "release_submission_tracks: artist read own",
    "release_submission_tracks: editor+ read all",
  ],
  "release_submissions": [
    "release_submissions: artist insert own",
    "release_submissions: artist read own",
    "release_submissions: editor+ read all",
    "release_submissions: editor+ update",
  ],
  "releases": [
    "releases: admin delete",
    "releases: artist own read",
    "releases: can_manage_releases insert",
    "releases: can_manage_releases update",
    "releases: public read visible",
  ],
  "role_changes": [
    "role_changes: admin insert",
    "role_changes: admin read",
  ],
  "role_permissions": [
    "role_permissions: admin update",
    "role_permissions: authenticated read",
  ],
  "sales_statement_line_items": [
    "sales_statement_line_items: admin all",
    "sales_statement_line_items: artist read own",
  ],
  "sales_statements": [
    "sales_statements: admin all",
    "sales_statements: artist read own",
  ],
  "settlement_periods": [
    "settlement_periods: admin all",
  ],
  "site_settings": [
    "site_settings_admin_write",
    "site_settings_public_read",
  ],
  "sos_accounting_workspaces": [
    "sos_accounting_workspaces: admin/editor all",
  ],
  "sos_period_summaries": [
    "sos_period_summaries: admin all",
  ],
  "sos_rules_presets": [
    "sos_rules_presets: admin all",
  ],
  "spotify_track_play_snapshots": [
    "spotify_track_play_snapshots: admin all",
    "spotify_track_play_snapshots: artist read own",
  ],
  "streaming_stats": [
    "streaming_stats: admin all",
    "streaming_stats: artist read own",
  ],
  "submission_form_drafts": [
    "submission_form_drafts: member all own",
  ],
  "submission_form_schema": [
    "submission_form_schema: editor+ write",
    "submission_form_schema: public read",
  ],
  "submission_release_type_rules": [
    "submission_release_type_rules: editor+ write",
    "submission_release_type_rules: public read",
  ],
  "support_known_errors": [
    "support_known_errors: admin read",
    "support_known_errors: admin write",
  ],
  "sync_logs": [
    "sync_logs: editor+ read",
  ],
  "sync_queue": [
    "sync_queue: admin all",
  ],
  "tour_artist_finance": [
    "tour_artist_finance: admin all",
    "tour_artist_finance: own artist",
  ],
  "tour_collaborators": [
    "tour_collaborators: admin all",
    "tour_collaborators: owner delete",
    "tour_collaborators: owner manage",
    "tour_collaborators: read",
  ],
  "tour_contacts": [
    "tour_contacts: admin all",
    "tour_contacts: artist manage",
  ],
  "tour_crew_members": [
    "tour_crew: admin all",
    "tour_crew: artist manage",
  ],
  "tour_merch_items": [
    "tour_merch_items: admin all",
    "tour_merch_items: artist manage",
  ],
  "tour_merch_settlements": [
    "tour_merch_settlements: admin all",
    "tour_merch_settlements: artist manage",
  ],
  "tour_share_links": [
    "tour_share_links: admin all",
    "tour_share_links: artist manage",
  ],
  "tour_stop_artist_private": [
    "tour_stop_artist_private: admin all",
    "tour_stop_artist_private: own artist",
  ],
  "tour_stop_performing_artists": [
    "tour_stop_performing_artists: admin all",
    "tour_stop_performing_artists: tour access",
  ],
  "tour_stops": [
    "tour_stops: admin all",
    "tour_stops: artist manage",
  ],
  "tour_tasks": [
    "tour_tasks: admin all",
    "tour_tasks: artist manage",
  ],
  "tours": [
    "tours: admin all",
    "tours: artist manage",
  ],
  "user_custom_roles": [
    "user_custom_roles: admin read",
    "user_custom_roles: admin write",
    "user_custom_roles: own read",
  ],
  "user_roles": [
    "user_roles: admin all",
    "user_roles: own read",
  ],
  "users": [
    "users: admin read all",
    "users: admin update all",
    "users: own read",
    "users: own update",
  ],
  "video_submissions": [
    "video_submissions: artist insert own",
    "video_submissions: artist read own",
    "video_submissions: editor+ read all",
    "video_submissions: editor+ update",
  ],
  "videos": [
    "videos: admin delete",
    "videos: can_manage_videos insert",
    "videos: can_manage_videos update",
    "videos: public read",
  ],
  "zammad_ticket_log": [
    "zammad_ticket_log: admin read",
  ],
}
`;
